--- a/map1/index.html
+++ b/map1/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="webmap1.css">
   </head>
   <body>
+  <body>
+    <h1>My Trip to Cancun Painted Map</h1>
+    <div id="myMapDiv"></div>
+  </body>
     <div id="map1"></div>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="webmap1.js"></script>
