--- a/map2/index.html
+++ b/map2/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
   <body>
-    <h1>My Second Leaflet</h1>
+    <h1>US Top 50 Cities Compared with Higher Education</h1>
     <div id="WorldImageMapDiv"></div>
   </body>
     <div id="map2"></div>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"></script>
     <script src="webmap2.js"></script>
+    <i> The push pins mark the Top 50 US Cities. The blue dots mark areas of higher education.</i>
   </body>
 </html>
