--- a/map3/index.html
+++ b/map3/index.html
@@ -2,19 +2,18 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Leaflet Assignment 2</title>
+    <title>Leaflet Assignment 3</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css">
-    <link rel="stylesheet" href="webmap2.css">
+    <link rel="stylesheet" href="webmap3.css">
   </head>
   <body>
   <body>
-    <h1>US Top 50 Cities Compared with Higher Education</h1>
+    <h1>US States Map</h1>
     <div id="WorldImageMapDiv"></div>
   </body>
-    <div id="map2"></div>
+    <div id="map3"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
-    <script src="https://unpkg.com/esri-leaflet@2.2.3/dist/esri-leaflet.js"></script>
-    <script src="webmap2.js"></script>
-    <i> The push pins mark the Top 50 US Cities. The blue dots mark areas of higher education.</i>
+    <script src="webmap3.js"></script>
   </body>
 </html>
