--- a/map3/index.html
+++ b/map3/index.html
@@ -8,12 +8,13 @@
   </head>
   <body>
   <body>
-    <h1>US States Map</h1>
+    <h1>US States with a 2016 Population Under 2,000,000</h1>
     <div id="WorldImageMapDiv"></div>
   </body>
     <div id="map3"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
     <script src="webmap3.js"></script>
+    <i> The US States with a population of less than 2,000,000 in 2016 appear in pink.</i>
   </body>
 </html>
