--- a/map4/index.html
+++ b/map4/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.4.0/dist/leaflet.css">
     <link rel="stylesheet" href="starter-template.css">
     <title></title>
   </head>
@@ -47,11 +48,37 @@
       <div class="starter-template">
         <h1>Bootstrap starter template</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
+        <button type="button">Regular button</button>
+        <button type="button" class="btn btn-danger">Button with Bootstrap classes</button>
+        <br><br>
+        <div id="map4"></div>
       </div>
+      <br><br>
     </main><!-- /.container -->
-
+     <!-- <h1>Heading 1</h1>
+     <h4>Heading 4</h4>
+     <p>Paragraph</p>
+     <a href="index.html">Link to a file in the same folder</a>
+     <a href="https://geog4046.github.io">Link to an external site</a>
+     <img src="icon.png" alt="My Image"> Image in the same folder
+     <img src="https://geog4046.github.io/icon.png" alt="My Image"> Image on an external site
+     <hr>Horizontal rule (line)
+     This is an unordered list:
+     <ul>
+       <li>Unordered list item 1</li>
+       <li>Unordered list item 2</li>
+     </ul>
+     This is an ordered list:
+     <ol>
+       <li>Ordered list item 1</li>
+       <li>Ordered list item 2</li>
+     </ol>
+     <strong>Bold indicating emphasis</strong>
+     <em>Italics indicating emphasis</em> -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
+    <script src= "webmap4.js"></script>
   </body>
 </html>
