--- a/map4/index.html
+++ b/map4/index.html
@@ -53,6 +53,7 @@
         <br><br>
         <div id="map4"></div>
       </div>
+      <!-- <div id="map1" class="shadow p-3 mb-5 bg-white rounded"></div> -->
       <br><br>
     </main><!-- /.container -->
      <!-- <h1>Heading 1</h1>
