--- a/map4/index.html
+++ b/map4/index.html
@@ -52,6 +52,7 @@
         <button type="button" class="btn btn-danger">Button with Bootstrap classes</button>
         <br><br>
         <div id="map4"></div>
+        This map shows <span class="theft">theft</span> .
       </div>
       <!-- <div id="map1" class="shadow p-3 mb-5 bg-white rounded"></div> -->
       <br><br>
@@ -76,7 +77,10 @@
      </ol>
      <strong>Bold indicating emphasis</strong>
      <em>Italics indicating emphasis</em> -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+     <script
+      src="https://code.jquery.com/jquery-3.4.0.min.js"
+      integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
+      crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.4.0/dist/leaflet.js"></script>
