--- a/map4/index.html
+++ b/map4/index.html
@@ -46,14 +46,16 @@
 
     <main role="main" class="container">
       <div class="starter-template">
-        <h1>Bootstrap starter template</h1>
+        <h1>Baton Rouge 2018 Crime Data</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
-        <button type="button">Regular button</button>
-        <button type="button" class="btn btn-danger">Button with Bootstrap classes</button>
+        <!-- <button type="button">Regular button</button> -->
+        <a href='https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu/data'target="_blank"><button type="button" class="btn btn-danger">Click to View Open Data BR</button></a>
         <br><br>
         <div id="map4"></div>
-        This map shows <span class="theft">theft</span> .
-      </div>
+        This map shows <span class="theft">theft</span>,
+        <span class="homicide">homicide</span>,
+        and <span class="othercrimes">other crimes</span>.
+        </div>
       <!-- <div id="map1" class="shadow p-3 mb-5 bg-white rounded"></div> -->
       <br><br>
     </main><!-- /.container -->
