--- a/map4/index.html
+++ b/map4/index.html
@@ -54,7 +54,7 @@
         <div id="map4"></div>
         This map shows <span class="theft">theft</span>,
         <span class="homicide">homicide</span>,
-        and <span class="othercrimes">other crimes</span>.
+        and <span class="other">other</span> crimes.
         </div>
       <!-- <div id="map1" class="shadow p-3 mb-5 bg-white rounded"></div> -->
       <br><br>
