--- a/map4/index.html
+++ b/map4/index.html
@@ -11,36 +11,36 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="icon.png" class="d-inline-block align-top" alt="GEOG 4046 Logo">
-        Name
+        <img src="icon.png" class="d-inline-block align-top" alt="FFC Consultants">
+        BR Crime Data
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <!-- <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
-          </li>
-          <li class="nav-item">
+          </li> -->
+          <!-- <li class="nav-item">
             <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-          </li>
+          </li> -->
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Browse All Data</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="https://data.brla.gov/browse"target=_blank>Open Data BR</a>
+              <a class="dropdown-item" href="https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu"target=_blank>Crime Incidents</a>
+              <a class="dropdown-item" href="https://my.brla.gov/#!/dashboard?places=&categories=sc2:333%3DT%26334%3DT%26335%3DT%26336%3DT%26337%3DT%26338%3DT%26339%3DT%26340%3DT%26341%3DT%26342%3DT%26343%3DT%26344%3DT%26345%3DT%26346%3DT%26347%3DT%26348%3DT%26349%3DT%7Csc4:ct237%3DT%26ct238%3DT%26ct239%3DT%26ct240%3DT%26ct241%3DT%26ct242%3DT%26ct243%3DT%26ct244%3DT%26ct245%3DT%26ct246%3DT%26ct247%3DT&start_date=2019-04-24&end_date=2019-05-01&lat=30.499209&lng=-91.114011&zoom=12&shapeIds=&shapeGroupId=i2e6-956r&mapType=Map&listViewTab=overview&overlayLayers=Council%20Districts&search_field=&search_value=&autoUpdate=false&heatFilters=&statusFilter=&choroplethField=count&searchType="target=_blank>Open Neighborhood BR</a>
             </div>
           </li>
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
           <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
-        </form>
+        </form> -->
       </div>
     </nav>
 
@@ -49,7 +49,7 @@
         <h1>Baton Rouge 2018 Crime Data</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
         <!-- <button type="button">Regular button</button> -->
-        <a href='https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu/data'target="_blank"><button type="button" class="btn btn-danger">Click to View Open Data BR</button></a>
+        <a href='https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu/data'target="_blank"><button type="button" class="btn btn-danger">Click to View Current Crime Data</button></a>
         <br><br>
         <div id="map4"></div>
         This map shows <span class="theft">theft</span>,
