--- a/map4/index.html
+++ b/map4/index.html
@@ -47,7 +47,7 @@
     <main role="main" class="container">
       <div class="starter-template">
         <h1>Baton Rouge 2018 Crime Data</h1>
-        <p class="lead">These are crimes reported in Baton Rouge and handled by the Baton Rouge Police Department. Crimes include Burglaries (Vehicle, Residential and Non-residential), Robberies (Individual and Business), Theft, Narcotics, Vice Crimes, Assault, Nuisance, Battery, Firearm, Homicides, Criminal Damage to Property, Sexual Assaults and Juvenile. <br> In order to protect the privacy of sexual assault victims and juvenile victims, these incidents are not geocoded and will not be mapped.</br></p>
+        <p class="lead">These are crimes reported in Baton Rouge and handled by the Baton Rouge Police Department. Crimes include Burglaries (Vehicle, Residential and Non-residential), Robberies (Individual and Business), <br>Theft, Narcotics, Vice Crimes, Assault, Nuisance, Battery, Firearm, Homicides, and Criminal Damage to Property.</br></p>
         <!-- <button type="button">Regular button</button> -->
         <a href='https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu/data'target="_blank"><button type="button" class="btn btn-danger">Click to View Current Crime Data</button></a>
         <br><br>
