--- a/map4/index.html
+++ b/map4/index.html
@@ -11,8 +11,8 @@
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
       <a class="navbar-brand" href="#">
-        <img src="icon.png" class="d-inline-block align-top" alt="FFC Consultants">
-        BR Crime Data
+        <img src="ffslogo.png" class="d-inline-block align-top" alt="FFC Consultants">
+        FFS Consultants
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -47,7 +47,7 @@
     <main role="main" class="container">
       <div class="starter-template">
         <h1>Baton Rouge 2018 Crime Data</h1>
-        <p class="lead">These are crimes reported in Baton Rouge and handled by the Baton Rouge Police Department. Crimes include Burglaries (Vehicle, Residential and Non-residential), Robberies (Individual and Business), Theft, Narcotics, Vice Crimes, Assault, Nuisance, Battery, Firearm, Homicides, and Criminal Damage to Property.</p>
+        <p class="lead">These are crimes reported in Baton Rouge throughout 2018 and handled by the Baton Rouge Police Department. Crimes include Burglaries (Vehicle, Residential and Non-residential), Robberies (Individual and Business), Theft, Narcotics, Vice Crimes, Assault, Nuisance, Battery, Firearm, Homicides, and Criminal Damage to Property.</p>
         <!-- <button type="button">Regular button</button> -->
         <a href='https://data.brla.gov/Public-Safety/Baton-Rouge-Crime-Incidents/fabb-cnnu/data'target="_blank"><button type="button" class="btn btn-danger">Click to View Current Crime Data</button></a>
         <br><br>
@@ -55,6 +55,8 @@
         This map shows <span class="theft">theft</span>,
         <span class="homicide">homicide</span>,
         and <span class="other">other</span> crimes.
+        <br></br>
+        <i>This map allows users to see patterns in the Baton Rouge crime data. The areas of high crime appear darker and more saturated. By having the different colors depending on the crime, users are able to see which kinds of crime typically happen near each other. You can click on a marker in order to see which type of crime occured there.</i>
         </div>
       <!-- <div id="map1" class="shadow p-3 mb-5 bg-white rounded"></div> -->
       <br><br>
